flapivor/tests/m1/hopix/parser/good/95-case-8.hopix
val polybox =
  case x { { box = y }<Int> => y }
