flapivor/tests/m1/hopix/parser/bad/39-type-definition-record-2.hopix
type Position = { offset : Int }
type Located<a> = { value : a; Position : Position }